--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
+        <header class="header">
+            <a href="#">
+                <img
+                    src="img/omnifood-logo.png"
+                    alt="Omnifood Logo"
+                    class="logo"
+                />
+            </a>
+            <nav class="main-nav">
+                <ul class="main-nav-list">
+                    <li><a class="main-nav-link" href="#">Section 1</a></li>
+                    <li><a class="main-nav-link" href="#">Section 2</a></li>
+                    <li><a class="main-nav-link" href="#">Section 3</a></li>
+                    <li><a class="main-nav-link" href="#">Section 4</a></li>
+                    <li>
+                        <a class="main-nav-link main-nav-link--cta" href="#"
+                            >Section 5</a
+                        >
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <section class="section-hero">
             <div class="hero">
                 <div class="hero-text-box">
@@ -59,7 +81,9 @@
                                 alt="Small customer photo"
                             />
                         </div>
-                        <p class="delivered-text"><span>250,000+</span> meals delivered last year!</p>
+                        <p class="delivered-text">
+                            <span>250,000+</span> meals delivered last year!
+                        </p>
                     </div>
                 </div>
 
