--- a/index.html
+++ b/index.html
@@ -96,5 +96,75 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-how">
+            <div class="container">
+                <span class="subheading">HOW IT WORKS</span>
+                <h2 class="heading-secondary">
+                    Your daily dose of health in 3 simple steps
+                </h2>
+            </div>
+
+            <div class="container">
+                <div class="grid grid--cols-2">
+                    <!-- STEP 01 -->
+                    <div class="step-text">
+                        <span class="step-number">01</span>
+                        <h3 class="heading-tertiary">
+                            Tell us what you like (and what not)
+                        </h3>
+                        <p class="step-description">
+                            Never again waste time thinking about what to eat!
+                            Omnifood AI will create a 100% personalized weekly
+                            meal plan just for you. It makes sure you get all
+                            the nutrients and vitamins you need, no matter what
+                            diet you follow!
+                        </p>
+                    </div>
+
+                    <div class="step-img-box">
+                        <img class="step-img" src="img/app/app-screen-1.png" alt="iPhone app screenshoot" />
+
+                    </div>
+                    <!-- STEP 02 -->
+                    <div class="step-img-box">
+                        <img class="step-img" src="img/app/app-screen-1.png" alt="iPhone app screenshoot" />
+                    </div>
+                    <div class="step-text">
+                        <span class="step-number">01</span>
+                        <h3 class="heading-tertiary">
+                            Tell us what you like (and what not)
+                        </h3>
+                        <p class="step-description">
+                            Never again waste time thinking about what to eat!
+                            Omnifood AI will create a 100% personalized weekly
+                            meal plan just for you. It makes sure you get all
+                            the nutrients and vitamins you need, no matter what
+                            diet you follow!
+                        </p>
+                    </div>
+
+                    <!-- STEP 03 -->
+                    <div class="step-text">
+                        <span class="step-number">01</span>
+                        <h3 class="heading-tertiary">
+                            Tell us what you like (and what not)
+                        </h3>
+                        <p class="step-description">
+                            Never again waste time thinking about what to eat!
+                            Omnifood AI will create a 100% personalized weekly
+                            meal plan just for you. It makes sure you get all
+                            the nutrients and vitamins you need, no matter what
+                            diet you follow!
+                        </p>
+                    </div>
+
+                    <div class="step-img-box">
+                        <img class="step-img" src="img/app/app-screen-2.png" alt="iPhone app screenshoot" />
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
