featured-in added

--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
             </div>
         </section>
 
+        <section class="section-featured-in">
+            <div class="container">
+                <h2 class="heading-featured-in">As featured in</h2>
+                <div class="logos">
+                    <img src="img/logos/techcrunch.png" alt="Techcrunh logo" />
+                    <img src="img/logos/business-insider.png" alt="Business insider logo" />
+                    <img src="img/logos/the-new-york-times.png" alt="New York Times logo" />
+                    <img src="img/logos/forbes.png" alt="Forbes logo" />
+                    <img src="img/logos/usa-today.png" alt="Usa Today logo" />
+                </div>
+            </div>
+        </section>
+
         <section class="section-how">
             <div class="container">
                 <span class="subheading">HOW IT WORKS</span>
@@ -123,12 +136,19 @@
                     </div>
 
                     <div class="step-img-box">
-                        <img class="step-img" src="img/app/app-screen-1.png" alt="iPhone app screenshoot" />
-
+                        <img
+                            class="step-img"
+                            src="img/app/app-screen-1.png"
+                            alt="iPhone app screenshoot"
+                        />
                     </div>
                     <!-- STEP 02 -->
                     <div class="step-img-box">
-                        <img class="step-img" src="img/app/app-screen-1.png" alt="iPhone app screenshoot" />
+                        <img
+                            class="step-img"
+                            src="img/app/app-screen-1.png"
+                            alt="iPhone app screenshoot"
+                        />
                     </div>
                     <div class="step-text">
                         <span class="step-number">01</span>
@@ -160,8 +180,11 @@
                     </div>
 
                     <div class="step-img-box">
-                        <img class="step-img" src="img/app/app-screen-2.png" alt="iPhone app screenshoot" />
-
+                        <img
+                            class="step-img"
+                            src="img/app/app-screen-2.png"
+                            alt="iPhone app screenshoot"
+                        />
                     </div>
                 </div>
             </div>
