--- a/index.html
+++ b/index.html
@@ -156,43 +156,40 @@
                     <div class="step-img-box">
                         <img
                             class="step-img"
-                            src="img/app/app-screen-1.png"
+                            src="img/app/app-screen-2.png"
                             alt="iPhone app screenshoot"
                         />
                     </div>
                     <div class="step-text">
-                        <span class="step-number">01</span>
+                        <span class="step-number">02</span>
                         <h3 class="heading-tertiary">
-                            Tell us what you like (and what not)
+                            Approve your weekly meal plan
                         </h3>
                         <p class="step-description">
-                            Never again waste time thinking about what to eat!
-                            Omnifood AI will create a 100% personalized weekly
-                            meal plan just for you. It makes sure you get all
-                            the nutrients and vitamins you need, no matter what
-                            diet you follow!
+                            Once per week, approve the meal plan generated for
+                            you by Omnifood AI. You can change ingredients, swap
+                            entire meals, or even add your own recipes.
                         </p>
                     </div>
 
                     <!-- STEP 03 -->
                     <div class="step-text">
-                        <span class="step-number">01</span>
+                        <span class="step-number">03</span>
                         <h3 class="heading-tertiary">
-                            Tell us what you like (and what not)
+                            Receive meals at convenient time
                         </h3>
                         <p class="step-description">
-                            Never again waste time thinking about what to eat!
-                            Omnifood AI will create a 100% personalized weekly
-                            meal plan just for you. It makes sure you get all
-                            the nutrients and vitamins you need, no matter what
-                            diet you follow!
+                            Best chefs in town will cook your selected meal
+                            every day, and we will deliver it to your door
+                            whenever works best for you. You can change delivery
+                            schedule and address daily!
                         </p>
                     </div>
 
                     <div class="step-img-box">
                         <img
                             class="step-img"
-                            src="img/app/app-screen-2.png"
+                            src="img/app/app-screen-3.png"
                             alt="iPhone app screenshoot"
                         />
                     </div>
@@ -201,13 +198,13 @@
         </section>
 
         <section class="section-meals">
-            <div class="container">
+            <div class="container text-center">
                 <span class="subheading">MEALS</span>
                 <h2 class="heading-secondary">
                     Omnifood AI chooses from 5,000+ recipes
                 </h2>
             </div>
-            <div class="container grid grid--cols-3">
+            <div class="container grid grid--cols-3 margin-bottom-md">
                 <div class="meal">
                     <img
                         src="/img/meals/meal-1.jpg"
@@ -227,28 +224,30 @@
                                     class="meal-icon"
                                     name="flame-outline"
                                 ></ion-icon>
-                                <span>650 Calories</span>
+                                <span><strong>650</strong> Calories</span>
                             </li>
                             <li class="meal-attribute">
                                 <ion-icon
                                     class="meal-icon"
                                     name="restaurant-outline"
                                 ></ion-icon>
-                                <span>NutriScore &reg; 74</span>
+                                <span
+                                    >NutriScore &reg; <strong>74</strong></span
+                                >
                             </li>
                             <li class="meal-attribute">
                                 <ion-icon
                                     class="meal-icon"
                                     name="star-outline"
                                 ></ion-icon>
-                                <span>4.9 Rating (537)</span>
+                                <span><strong>4.9</strong> Rating (537)</span>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="meal">
                     <img
-                        src="/img/meals/meal-1.jpg"
+                        src="/img/meals/meal-2.jpg"
                         alt="Avocado Salad"
                         class="meal-img"
                     />
@@ -264,69 +263,100 @@
                                     class="meal-icon"
                                     name="flame-outline"
                                 ></ion-icon>
-                                <span>400 Calories</span>
+                                <span><strong>400</strong> Calories</span>
                             </li>
                             <li class="meal-attribute">
                                 <ion-icon
                                     class="meal-icon"
                                     name="restaurant-outline"
                                 ></ion-icon>
-                                <span>NutriScore &reg; 92</span>
+                                <span
+                                    >NutriScore &reg; <strong>92</strong></span
+                                >
                             </li>
                             <li class="meal-attribute">
                                 <ion-icon
                                     class="meal-icon"
                                     name="star-outline"
                                 ></ion-icon>
-                                <span>4.8 Rating (441)</span>
+                                <span><strong>4.8</strong> Rating (441)</span>
                             </li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="meal-diets">
-                    <h3 class="heading-tertiary">
-                        Works with any diet:
-                    </h3>
+                    <h3 class="heading-tertiary">Works with any diet:</h3>
                     <ul class="diets-list">
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Vegetarian</span>
                         </li>
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Vegan</span>
                         </li>
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Pescatarian</span>
                         </li>
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Gluten-free</span>
                         </li>
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Lactose-free</span>
                         </li>
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Keto</span>
                         </li>
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Paleo</span>
                         </li>
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Low FODMAP</span>
                         </li>
                         <li class="diet">
-                            <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon>
+                            <ion-icon
+                                class="diet-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
                             <span>Kid-friendly</span>
                         </li>
                     </ul>
                 </div>
+            </div>
+
+            <div class="container all-recipes">
+                <a href="#" class="link">See all recipes &rarr;</a>
             </div>
         </section>
 
