--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="css/sections/featured-in.css" />
         <link rel="stylesheet" href="css/sections/how-it-works.css" />
         <link rel="stylesheet" href="css/sections/meals.css" />
+        <link rel="stylesheet" href="css/sections/testimonials.css" />
     </head>
     <body>
         <header class="header">
@@ -358,6 +359,66 @@
             <div class="container all-recipes">
                 <a href="#" class="link">See all recipes &rarr;</a>
             </div>
+        </section>
+
+        <section class="section-testimonials">
+            <div class="testimonials-container">
+                <span class="subheading">TESTIMONIALS</span>
+                <h2 class="heading-secondary">
+                    Once you try it, you can't go back
+                </h2>
+                <div class="testimonials">
+                    <figure class="testimonial">
+                        <img
+                            src="img/customers/dave.jpg"
+                            alt="Testimonial Dave"
+                        />
+                        <blockquote class="testimonial-quote">
+                            Inexpensive, healthy and great-tasting meals,
+                            without even having to order manually! It feels
+                            truly magical.
+                        </blockquote>
+                        <p class="testimonial-name">&mdash; Dave Bryson</p>
+                    </figure>
+                    <figure class="testimonial">
+                        <img
+                            src="img/customers/ben.jpg"
+                            alt="Testimonial Ben"
+                        />
+                        <blockquote class="testimonial-quote">
+                            The AI algorithm is crazy good, it chooses the right
+                            meals for me every time. It's amazing not to worry
+                            about food anymore!
+                        </blockquote>
+                        <p class="testimonial-name">&mdash; Ben Hadley</p>
+                    </figure>
+                    <figure class="testimonial">
+                        <img
+                            src="img/customers/steve.jpg"
+                            alt="Testimonial Ben"
+                        />
+                        <blockquote class="testimonial-quote">
+                            Omnifood is a life saver! I just started a company,
+                            so there's no time for cooking. I couldn't live
+                            without my daily meals now!
+                        </blockquote>
+                        <p class="testimonial-name">&mdash; Steve Miller</p>
+                    </figure>
+                    <figure class="testimonial">
+                        <img
+                            src="img/customers/hannah.jpg"
+                            alt="Testimonial Ben"
+                        />
+                        <blockquote class="testimonial-quote">
+                            I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan and without plastic.
+
+                        </blockquote>
+                        <p class="testimonial-name">&mdash; Hannah Smith</p>
+                    </figure>
+                </div>
+            </div>
+
+            <div class="gallery">Gallery</div>
         </section>
 
         <script
