--- a/index.html
+++ b/index.html
@@ -410,15 +410,89 @@
                             alt="Testimonial Ben"
                         />
                         <blockquote class="testimonial-quote">
-                            I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan and without plastic.
-
+                            I got Omnifood for the whole family, and it frees up
+                            so much time! Plus, everything is organic and vegan
+                            and without plastic.
                         </blockquote>
                         <p class="testimonial-name">&mdash; Hannah Smith</p>
                     </figure>
                 </div>
             </div>
 
-            <div class="gallery">Gallery</div>
+            <div class="gallery">
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-1.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-2.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-3.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-4.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-5.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-6.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-7.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-8.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-9.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-10.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-11.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+                <figure class="gallery-item">
+                    <img
+                        src="img/gallery/gallery-12.jpg"
+                        alt="Delicious food gallery image"
+                    />
+                </figure>
+            </div>
         </section>
 
         <script
