--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/sections/how-it-works.css" />
         <link rel="stylesheet" href="css/sections/meals.css" />
         <link rel="stylesheet" href="css/sections/testimonials.css" />
+        <link rel="stylesheet" href="css/sections/pricing.css" />
     </head>
     <body>
         <header class="header">
@@ -288,66 +289,66 @@
 
                 <div class="meal-diets">
                     <h3 class="heading-tertiary">Works with any diet:</h3>
-                    <ul class="diets-list">
-                        <li class="diet">
+                    <ul class="list">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Vegetarian</span>
                         </li>
-                        <li class="diet">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Vegan</span>
                         </li>
-                        <li class="diet">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Pescatarian</span>
                         </li>
-                        <li class="diet">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Gluten-free</span>
                         </li>
-                        <li class="diet">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Lactose-free</span>
                         </li>
-                        <li class="diet">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Keto</span>
                         </li>
-                        <li class="diet">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Paleo</span>
                         </li>
-                        <li class="diet">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Low FODMAP</span>
                         </li>
-                        <li class="diet">
+                        <li class="list-item">
                             <ion-icon
-                                class="diet-icon"
+                                class="list-item-icon"
                                 name="checkmark-outline"
                             ></ion-icon>
                             <span>Kid-friendly</span>
@@ -492,6 +493,115 @@
                         alt="Delicious food gallery image"
                     />
                 </figure>
+            </div>
+        </section>
+
+        <section class="section-pricing">
+            <div class="container">
+                <span class="subheading">PRICING</span>
+                <h2 class="heading-secondary">
+                    Eating well without breaking the bank
+                </h2>
+            </div>
+
+            <div class="container grid grid--cols-2">
+                <div class="pricing-card pricing-card--starter">
+                    <div class="header-pricing">
+                        <p class="pricing-title">Starter</p>
+                        <p class="pricing-value"><span>$</span> 399</p>
+                        <p class="pricing-text">
+                            per month. That's just $13 per meal!
+                        </p>
+                    </div>
+
+                    <ul class="list">
+                        <li class="list-item">
+                            <ion-icon
+                                class="list-item-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
+                            <span>1 meal per day</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon
+                                class="list-item-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
+                            <span>Order from 11am to 9pm</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon
+                                class="list-item-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
+                            <span>Delivery is free</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon
+                                class="list-item-icon"
+                                name="close-outline"
+                            ></ion-icon>
+                            <span></span>
+                        </li>
+                    </ul>
+                    <div class="btn-cta-sign-up">
+                        <a class="btn btn--cta" href="#"
+                            >Start Eating Well</a
+                        >
+                    </div>
+                </div>
+                <div class="pricing-card pricing-card--complete">
+                    <header class="header-pricing">
+                        <p class="pricing-title">Complete</p>
+                        <p class="pricing-value"><span>$</span> 649</p>
+                        <p class="pricing-text">
+                            per month. That's just $11 per meal!
+                        </p>
+                    </header>
+
+                    <ul class="list">
+                        <li class="list-item">
+                            <ion-icon
+                                class="list-item-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
+                            <span><strong>2 meals</strong> per day</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon
+                                class="list-item-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
+                            <span>Order <strong>24/7</strong></span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon
+                                class="list-item-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
+                            <span>Delivery is free</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon
+                                class="list-item-icon"
+                                name="checkmark-outline"
+                            ></ion-icon>
+                            <span>Get access to latest recipes</span>
+                        </li>
+                    </ul>
+                    <div class="btn-cta-sign-up">
+                        <a class="btn btn--cta" href="#"
+                            >Start Eating Well</a
+                        >
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid grid--cols-4">
+                <div class="feature">FEATURE</div>
+                <div class="feature">FEATURE</div>
+                <div class="feature">FEATURE</div>
+                <div class="feature">FEATURE</div>
             </div>
         </section>
 
