--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 </h2>
             </div>
 
-            <div class="container grid grid--cols-2">
+            <div class="container grid grid--cols-2 margin-bottom-md">
                 <div class="pricing-card pricing-card--starter">
                     <div class="header-pricing">
                         <p class="pricing-title">Starter</p>
@@ -545,9 +545,7 @@
                         </li>
                     </ul>
                     <div class="btn-cta-sign-up">
-                        <a class="btn btn--cta" href="#"
-                            >Start Eating Well</a
-                        >
+                        <a class="btn btn--cta" href="#">Start Eating Well</a>
                     </div>
                 </div>
                 <div class="pricing-card pricing-card--complete">
@@ -590,18 +588,62 @@
                         </li>
                     </ul>
                     <div class="btn-cta-sign-up">
-                        <a class="btn btn--cta" href="#"
-                            >Start Eating Well</a
-                        >
+                        <a class="btn btn--cta" href="#">Start Eating Well</a>
                     </div>
                 </div>
             </div>
 
-            <div class="grid grid--cols-4">
-                <div class="feature">FEATURE</div>
-                <div class="feature">FEATURE</div>
-                <div class="feature">FEATURE</div>
-                <div class="feature">FEATURE</div>
+            <div class="container grid">
+                <aside class="plan-details">
+                    Prices include all applicable taxes. You can cancel at any
+                    time. Both plans include the following:
+                </aside>
+            </div>
+            <div class="container grid grid--cols-4">
+                <div class="feature">
+                    <ion-icon
+                        class="feature-icon"
+                        name="infinite-outline"
+                    ></ion-icon>
+                    <p class="feature-title">Never cook again!</p>
+                    <p class="feature-description">
+                        Our subscriptions cover 365 days per year, even
+                        including major holidays.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon
+                        class="feature-icon"
+                        name="nutrition-outline"
+                    ></ion-icon>
+                    <p class="feature-title">Local and organic</p>
+                    <p class="feature-description">
+                        Our cooks only use local, fresh, and organic products to
+                        prepare your meals.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon
+                        class="feature-icon"
+                        name="leaf-outline"
+                    ></ion-icon>
+                    <p class="feature-title">No waste</p>
+                    <p class="feature-description">
+                        All our partners only use reusable containers to package
+                        all your meals.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon
+                        class="feature-icon"
+                        name="pause-outline"
+                    ></ion-icon>
+                    <p class="feature-title">Pause anytime</p>
+                    <p class="feature-description">
+                        Going on vacation? Just pause your subscription, and we
+                        refund unused days.
+                    </p>
+                </div>
             </div>
         </section>
 
