--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <link rel="stylesheet" href="css/sections/meals.css" />
         <link rel="stylesheet" href="css/sections/testimonials.css" />
         <link rel="stylesheet" href="css/sections/pricing.css" />
+        <link rel="stylesheet" href="css/sections/cta-form.css" />
+        <link rel="stylesheet" href="css/sections/footer.css" />
     </head>
     <body>
         <header class="header">
@@ -646,6 +648,182 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-cta">
+            <div class="container">
+                <div class="cta">
+                    <div class="cta-content-box">
+                        <h2 class="heading-secondary">
+                            Get your first meal for free!
+                        </h2>
+                        <p class="cta-text">
+                            Healthy, tasty and hassle-free meals are waiting for
+                            you. Start eating well today. You can cancel or
+                            pause anytime. And the first meal is on us!
+                        </p>
+                        <form action="#" class="form-cta">
+                            <div>
+                                <label for="full-name">Full Name</label>
+                                <input
+                                    type="text"
+                                    name="full-name"
+                                    id="full-name"
+                                    placeholder="John Smith"
+                                    required
+                                />
+                            </div>
+
+                            <div>
+                                <label for="email">Email address</label>
+                                <input
+                                    type="email"
+                                    name="email"
+                                    id="email"
+                                    placeholder="me@example.com"
+                                    required
+                                />
+                            </div>
+
+                            <div>
+                                <label for="select-where"
+                                    >Where did you hear from us?</label
+                                >
+                                <select name="select-where" id="select-where">
+                                    <option value="">
+                                        Please choose one option:
+                                    </option>
+                                    <option value="friends">
+                                        Friends and family
+                                    </option>
+                                    <option value="youtube">
+                                        YouTube video
+                                    </option>
+                                    <option value="podcast">Podcast</option>
+                                    <option value="ad">Facebook ad</option>
+                                    <option value="others">Others</option>
+                                </select>
+                            </div>
+
+                            <button class="form-btn">Sign up now</button>
+                        </form>
+                    </div>
+                    <!-- img stays in css -->
+                    <div
+                        class="cta-img-box"
+                        role="img"
+                        aria-label="Woman eating food"
+                    ></div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="container grid footer-grid">
+                <div class="logo-col">
+                    <a href="#" class="footer-logo">
+                        <img
+                            src="img/omnifood-logo.png"
+                            alt="Omnifood Logo"
+                            class="logo"
+                        />
+                    </a>
+                    <div class="social-links-box">
+                        <ul class="social-links">
+                            <li>
+                                <a class="footer-link" href="#"
+                                    ><ion-icon
+                                        class="social-icon"
+                                        name="logo-instagram"
+                                    ></ion-icon
+                                ></a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#"
+                                    ><ion-icon
+                                        class="social-icon"
+                                        name="logo-facebook"
+                                    ></ion-icon
+                                ></a>
+                            </li>
+                            <li>
+                                <a class="footer-link" href="#"
+                                    ><ion-icon
+                                        class="social-icon"
+                                        name="logo-twitter"
+                                    ></ion-icon
+                                ></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <p class="copyright">
+                        Copyright &copy; 2023 by Omnifood, Inc. All rights
+                        reserved.
+                    </p>
+                </div>
+
+                <div class="address-col">
+                    <p class="footer-heading">Contact us</p>
+                    <address class="contacts">
+                        <p class="address">
+                            623 Harrison St., 2nd Floor, San Francisco, CA 94107
+                        </p>
+                        <a class="footer-link" href="tel:415-201-6370">415-201-6370</a> <br />
+                        <a class="footer-link" href="mail:hello@omnifood.com">hello@omnifood.com</a>
+                    </address>
+                </div>
+
+                <nav class="nav-col">
+                    <p class="footer-heading">Account</p>
+                    <ul class="footer-nav">
+                        <li>
+                            <a href="#" class="footer-link">Create account</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">Sign in</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">iOS app</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">Android app</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <nav class="nav-col">
+                    <p class="footer-heading">Company</p>
+                    <ul class="footer-nav">
+                        <li>
+                            <a href="#" class="footer-link">About Omnifood</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">For Business</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">Cooking partners</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">Careers</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <nav class="nav-col">
+                    <p class="footer-heading">Resources</p>
+                    <ul class="footer-nav">
+                        <li>
+                            <a href="#" class="footer-link">Recipe directory</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">Help center</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer-link">Privacy & terms</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
 
         <script
             type="module"
