--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="css/sections/pricing.css" />
         <link rel="stylesheet" href="css/sections/cta-form.css" />
         <link rel="stylesheet" href="css/sections/footer.css" />
+        <link rel="stylesheet" href="css/queries.css" />
     </head>
     <body>
         <header class="header">
@@ -34,13 +35,13 @@
             </a>
             <nav class="main-nav">
                 <ul class="main-nav-list">
-                    <li><a class="main-nav-link" href="#">Section 1</a></li>
-                    <li><a class="main-nav-link" href="#">Section 2</a></li>
-                    <li><a class="main-nav-link" href="#">Section 3</a></li>
-                    <li><a class="main-nav-link" href="#">Section 4</a></li>
+                    <li><a class="main-nav-link" href="#">How it works</a></li>
+                    <li><a class="main-nav-link" href="#">Meals</a></li>
+                    <li><a class="main-nav-link" href="#">Testimonials</a></li>
+                    <li><a class="main-nav-link" href="#">Pricing</a></li>
                     <li>
                         <a class="main-nav-link main-nav-link--cta" href="#"
-                            >Section 5</a
+                            >Try for free</a
                         >
                     </li>
                 </ul>
