--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     class="logo"
                 />
             </a>
-            <nav class="main-nav">
+            <nav class="main-nav ">
                 <ul class="main-nav-list">
                     <li><a class="main-nav-link" href="#">How it works</a></li>
                     <li><a class="main-nav-link" href="#">Meals</a></li>
@@ -46,6 +46,11 @@
                     </li>
                 </ul>
             </nav>
+
+            <button class="btn-mobile-nav">
+                <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+                <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+            </button>
         </header>
         <section class="section-hero">
             <div class="hero">
