--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <link rel="stylesheet" href="css/sections/cta-form.css" />
         <link rel="stylesheet" href="css/sections/footer.css" />
         <link rel="stylesheet" href="css/queries.css" />
+        <script defer src="js/script.js"></script>
     </head>
     <body>
         <header class="header">
@@ -33,7 +34,7 @@
                     class="logo"
                 />
             </a>
-            <nav class="main-nav ">
+            <nav class="main-nav">
                 <ul class="main-nav-list">
                     <li><a class="main-nav-link" href="#">How it works</a></li>
                     <li><a class="main-nav-link" href="#">Meals</a></li>
@@ -48,8 +49,14 @@
             </nav>
 
             <button class="btn-mobile-nav">
-                <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
-                <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+                <ion-icon
+                    class="icon-mobile-nav"
+                    name="menu-outline"
+                ></ion-icon>
+                <ion-icon
+                    class="icon-mobile-nav"
+                    name="close-outline"
+                ></ion-icon>
             </button>
         </header>
         <section class="section-hero">
@@ -762,8 +769,8 @@
                         </ul>
                     </div>
                     <p class="copyright">
-                        Copyright &copy; 2023 by Omnifood, Inc. All rights
-                        reserved.
+                        Copyright &copy; <span class="year">2023</span> by
+                        Omnifood, Inc. All rights reserved.
                     </p>
                 </div>
 
@@ -773,8 +780,13 @@
                         <p class="address">
                             623 Harrison St., 2nd Floor, San Francisco, CA 94107
                         </p>
-                        <a class="footer-link" href="tel:415-201-6370">415-201-6370</a> <br />
-                        <a class="footer-link" href="mail:hello@omnifood.com">hello@omnifood.com</a>
+                        <a class="footer-link" href="tel:415-201-6370"
+                            >415-201-6370</a
+                        >
+                        <br />
+                        <a class="footer-link" href="mail:hello@omnifood.com"
+                            >hello@omnifood.com</a
+                        >
                     </address>
                 </div>
 
