scroll smooth added

--- a/index.html
+++ b/index.html
@@ -36,10 +36,24 @@
             </a>
             <nav class="main-nav">
                 <ul class="main-nav-list">
-                    <li><a class="main-nav-link" href="#">How it works</a></li>
-                    <li><a class="main-nav-link" href="#">Meals</a></li>
-                    <li><a class="main-nav-link" href="#">Testimonials</a></li>
-                    <li><a class="main-nav-link" href="#">Pricing</a></li>
+                    <li>
+                        <a class="main-nav-link" href="#section-how"
+                            >How it works</a
+                        >
+                    </li>
+                    <li>
+                        <a class="main-nav-link" href="#section-meals">Meals</a>
+                    </li>
+                    <li>
+                        <a class="main-nav-link" href="#section-testimonials"
+                            >Testimonials</a
+                        >
+                    </li>
+                    <li>
+                        <a class="main-nav-link" href="#section-pricing"
+                            >Pricing</a
+                        >
+                    </li>
                     <li>
                         <a class="main-nav-link main-nav-link--cta" href="#"
                             >Try for free</a
@@ -137,7 +151,7 @@
             </div>
         </section>
 
-        <section class="section-how">
+        <section class="section-how" id="section-how">
             <div class="container">
                 <span class="subheading">HOW IT WORKS</span>
                 <h2 class="heading-secondary">
@@ -214,7 +228,7 @@
             </div>
         </section>
 
-        <section class="section-meals">
+        <section class="section-meals" id="section-meals">
             <div class="container text-center">
                 <span class="subheading">MEALS</span>
                 <h2 class="heading-secondary">
@@ -377,7 +391,7 @@
             </div>
         </section>
 
-        <section class="section-testimonials">
+        <section class="section-testimonials" id="section-testimonials">
             <div class="testimonials-container">
                 <span class="subheading">TESTIMONIALS</span>
                 <h2 class="heading-secondary">
@@ -511,7 +525,7 @@
             </div>
         </section>
 
-        <section class="section-pricing">
+        <section class="section-pricing" id="section-pricing">
             <div class="container">
                 <span class="subheading">PRICING</span>
                 <h2 class="heading-secondary">
